--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hyy</h1>
+ <div class="card">
+    <img src="https://images.unsplash.com/photo-1599566276129-97d70dfdda11?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+<h5>Priya Angle</h5>
+<p>Stranger</p>
+
+<div>
+    <button class="btn-1">Add Friends</button>
+
+</div>
+
+ </div>
 
     <script src="script.js"></script>
 </body>
